--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask==1.0.2
 numpy==1.17.3
-future==0.16.0
-pyyaml==5.1
-Jinja2==2.10.1
+matplotlib==3.1.1
+kwant==1.4.1
+cmocean==2.0
+voila==0.1.3
+ipywidgets==7.5.1
+
